--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectPmob"
         tools:targetApi="31">
-        <activity android:name=".SplashScreen"
+        <activity
+            android:name=".LihatRestauran"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".HelpActivity" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".ShowActivity" />
     </application>
 
 </manifest>
